--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eas-build-pre-install": "npm config set legacy-peer-deps true"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/geolocation": "^3.2.1",
     "@react-native-firebase/app": "^19.0.0",
-    "@react-native-firebase/auth": "^19.0.0",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native-stack": "^6.9.17",
     "base-64": "^1.0.0",
